CarSales is done

--- a/CarSales.html
+++ b/CarSales.html
@@ -7,9 +7,176 @@
     <title>Car Sales</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-    <script src="main.js"></script>
 </head>
 <body>
-    
+    <form method="GetUsedCar" action="./process.php">
+    <table>
+        <tr>
+
+            <td>
+                <table height="200px" width="350px">
+                    <tr>
+                       <th>Sale</th>
+                    </tr>
+                    <tr>
+                        <td>Date <input name="date" type="date"></td>
+                    </tr>
+                    <tr>
+                        <td>Total Due <input name="total" type="number"></td>
+                    </tr>
+                    <tr>
+                        <td>Down Payment <input name="down" type="number"</td>
+                    </tr>
+                    <tr>
+                        <td>Financed Ammount <input name="financed" type="number"></td>
+                    </tr>
+                    <tr>
+                        <td>Interest Rate <input name="interest" type="text"></td>
+                    </tr>
+                </table>        
+            </td>
+
+            <td>
+                <table height="200px" width="350px">
+                        <tr><th>Salesperson</th></tr>
+                        <tr><td>Last Name <input name="saleslast" type="text"></td></tr>
+                        <tr><td>First Name <input name="salesfirst" type="text"></td></tr>
+                        <tr><td>Phone <input name="salesphone" type="text"></td></tr>
+                        <tr><td>Commision <input name="commision" type="number"></td></tr>
+                </table>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <table height="" width="350px">
+                        <tr><th>Customer</th></tr>
+                        <tr><td>Phone <input name="custphone" type="text"></td></tr>
+                        <tr><td>Last Name <input name="custfirst" type="text"></td></tr>
+                        <tr><td>First Name <input name="custlast" type="text"></td></tr>
+                        <tr><td>Address <input name="address" type="text"></td></tr>
+                        <tr><td>City <input name="city" type="text"></td></tr>
+                        <tr><td>Province <input name="province" type="text"></td></tr>
+                        <tr><td>Zip <input name="zip" type="text" maxlength="6"></td></tr>
+                </table>
+            </td>
+            <td>
+                <table>
+                        <tr><th colspan="6">Employment History</th></tr>
+                        <tr class="fillout">
+                            <td class="fillout">Employer</td>
+                            <td class="fillout">Title</td>
+                            <td class="fillout">Super.</td>
+                            <td class="fillout">Phone</td>
+                            <td class="fillout">Address</td>
+                            <td class="fillout">Start</td>
+                        </tr>
+
+
+                        <tr class="fillout">
+                            <td class="fillout"><input name="e0" type="text"></td>
+                            <td class="fillout"><input name="t0" type="text"></td>
+                            <td class="fillout"><input name="su0" type="text"></td>
+                            <td class="fillout"><input name="p0" type="text"></td>
+                            <td class="fillout"><input name="a0" type="text"></td>
+                            <td class="fillout"><input name="s0" type="text"></td>
+                        </tr>
+                        <!--ADD HISTORY WOULD INSERT NEW SECTION HERE-->
+                        <!--BUTTON FOR INPUTTING FILLOUT
+                        <tr>
+                            <td><button name="addhistory">Add History</button></td>
+                        </tr>
+                        -->
+
+                        <!-- Possibly use a PHP script for this.-->
+                        <tr class="fillout">
+                                <td class="fillout"><input name="e1" type="text"></td>
+                                <td class="fillout"><input name="t1" type="text"></td>
+                                <td class="fillout"><input name="su1" type="text"></td>
+                                <td class="fillout"><input name="p1" type="text"></td>
+                                <td class="fillout"><input name="a1" type="text"></td>
+                                <td class="fillout"><input name="s1" type="text"></td>
+                        </tr>
+
+                        <tr class="fillout">
+                                <td class="fillout"><input name="e2" type="text"></td>
+                                <td class="fillout"><input name="t2" type="text"></td>
+                                <td class="fillout"><input name="su2" type="text"></td>
+                                <td class="fillout"><input name="p2" type="text"></td>
+                                <td class="fillout"><input name="a2" type="text"></td>
+                                <td class="fillout"><input name="s2" type="text"></td>
+                        </tr>
+
+                        <tr class="fillout">
+                                <td class="fillout"><input name="e3" type="text"></td>
+                                <td class="fillout"><input name="t3" type="text"></td>
+                                <td class="fillout"><input name="su3" type="text"></td>
+                                <td class="fillout"><input name="p3" type="text"></td>
+                                <td class="fillout"><input name="a3" type="text"></td>
+                                <td class="fillout"><input name="s3" type="text"></td>
+                        </tr>
+
+                        <tr class="fillout">
+                                <td class="fillout"><input name="e4" type="text"></td>
+                                <td class="fillout"><input name="t4" type="text"></td>
+                                <td class="fillout"><input name="su4" type="text"></td>
+                                <td class="fillout"><input name="p4" type="text"></td>
+                                <td class="fillout"><input name="a4" type="text"></td>
+                                <td class="fillout"><input name="s4" type="text"></td>
+                        </tr>
+
+                        <tr class="fillout">
+                                <td class="fillout"><input name="e5" type="text"></td>
+                                <td class="fillout"><input name="t5" type="text"></td>
+                                <td class="fillout"><input name="su5" type="text"></td>
+                                <td class="fillout"><input name="p5" type="text"></td>
+                                <td class="fillout"><input name="a5" type="text"></td>
+                                <td class="fillout"><input name="s5" type="text"></td>
+                        </tr>
+
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <table width="350px">
+                        <tr>
+                            <th>Vehicle Info</th>
+                        </tr>
+                        <tr><td>VIN<input name="Vin" type="text" maxlength="17"></td></tr>
+                        <tr><td>Model
+                            <select name="Model">
+                                <option>Camry</option>
+                                <option>Corolla</option>
+                                <option>Rav4</option>
+                            </select>
+                        </td></tr>
+                        <tr><td>Edition
+                            <select name="Edition">
+                                <option>BE</option>
+                                <option>CE</option>
+                                <!--NOTE based on model, add certain edition HERE-->
+                                <!--<option></option>-->
+                            </select>
+                        </td></tr>
+                        <tr><td>Year<input name="year" type="number" value="2000"></td></tr>
+                        <tr><td>Miles
+                                <select name="Miles">
+                                        <option>< 20,000 </option>
+                                        <option>< 50,000</option>
+                                        <option>< 100,000</option>
+                                        <option>< 200,000</option>
+                                        <option>< 500,000</option>
+                                </select>
+                        </td></tr>
+                        <tr><td>Sale Price <input name="saleprice" type="number"></td></tr>
+                        
+
+                </table>
+            </td>         
+        </tr>
+    </table>
+
+    </form>
 </body>
 </html>
