--- a/UsedCar.html
+++ b/UsedCar.html
@@ -34,9 +34,7 @@
 
         <table style="width:1200px">
             <tr class="info">
-                <td>Vehicle Info</td>
-                <td></td>
-                <td></td>
+                <td  colspan="3" >Vehicle Info</td>
                 <td class="info"width="10px">#</td>
                 <td class="info">Problem</td>
                 <td class="info">Est. Repair cost</td>
@@ -77,21 +75,17 @@
             </tr>
 
             <tr>
-            <td>Colour                 
+            <td colspan="3">Colour                 
                 <select name="Colour">
                 <!--INSERT ANSWER TO ABOVE HERE in new option appended to end-->
                 <option>Black</option></td>
-            <td></td>
-            <td></td>
                 <td class="fillout"><input name="f01" size="2px"></td>
                 <td class="fillout"><input name="f11" size="35px"></td>
                 <td class="fillout"><input name="f21" size="15px"></td>
                 <td class="fillout"><input name="f31" size="15px"></td>
             </tr>
             <tr>
-                <td>Miles <input name="miles" type="number" value="2000"></td>
-                <td></td>
-                <td></td>
+                <td colspan="3">Miles <input name="miles" type="number" value="2000"></td>
                 <td class="fillout"><input name="f02" size="2px"></td>
                 <td class="fillout"><input name="f12" size="35px"></td>
                 <td class="fillout"><input name="f22" size="15px"></td>
@@ -99,9 +93,7 @@
             </tr>
             
             <tr>
-                <td>Book Price <input name="bookprice" type="number" value="2000"></td>
-                <td></td>
-                <td></td>
+                <td colspan="3">Book Price <input name="bookprice" type="number" value="2000"></td>
                 <td class="fillout"><input name="f03" size="2px"></td>
                 <td class="fillout"><input name="f13" size="35px"></td>
                 <td class="fillout"><input name="f23" size="15px"></td>
@@ -109,9 +101,7 @@
             </tr>
             
             <tr>
-                <td>Price Paid <input name="paidprice" type="number" value="2000"></td>
-                <td></td>
-                <td></td>
+                <td colspan="3">Price Paid <input name="paidprice" type="number" value="2000"></td>
                 <td class="fillout"><input name="f04" size="2px"></td>
                 <td class="fillout"><input name="f14" size="35px"></td>
                 <td class="fillout"><input name="f24" size="15px"></td>
