--- a/CarSales.html
+++ b/CarSales.html
@@ -61,7 +61,7 @@
                 </table>
             </td>
             <td>
-                <table>
+                <table >
                         <tr><th colspan="6">Employment History</th></tr>
                         <tr class="fillout">
                             <td class="fillout">Employer</td>
@@ -170,13 +170,14 @@
                                 </select>
                         </td></tr>
                         <tr><td>Sale Price <input name="saleprice" type="number"></td></tr>
-                        
-
                 </table>
             </td>         
         </tr>
+        <tr>
+            <td><input type="submit"></td>
+        </tr>
     </table>
-
     </form>
+    <a href="./index.html"><button>Back</button></a>  
 </body>
 </html>
