Removed unwanted default values

--- a/CarSales.html
+++ b/CarSales.html
@@ -160,15 +160,7 @@
                             </select>
                         </td></tr>
                         <tr><td>Year<input name="year" type="number" value="2000"></td></tr>
-                        <tr><td>Miles
-                                <select name="Miles">
-                                        <option>< 20,000 </option>
-                                        <option>< 50,000</option>
-                                        <option>< 100,000</option>
-                                        <option>< 200,000</option>
-                                        <option>< 500,000</option>
-                                </select>
-                        </td></tr>
+                        <tr><td>Miles<input name="miles" type="number"></td></tr>
                         <tr><td>Sale Price <input name="saleprice" type="number"></td></tr>
                 </table>
             </td>         
