--- a/NewCar.html
+++ b/NewCar.html
@@ -18,10 +18,10 @@
                 <td>
                     <table width="525px">
                         <tr><th colspan="2">New Car Purchase</th></tr>
-                        <tr><td>Date & Vin</td><td></tr>
-                        <tr>
-                            <td><input name="Date" type="date"></td>
-                            <td><input name="Vin" type="text" value="Enter Vin" maxlength="17"></td>
+                        <tr><td>Date & Vin
+                                <input name="Date" type="date">
+                                <input name="Vin" type="text" value="Enter Vin" maxlength="17">
+                        </td>
                         </tr>
                     </table>
                 </td>
