--- a/UsedCar.html
+++ b/UsedCar.html
@@ -69,9 +69,9 @@
                             <option>Black</option>
                         </td>
                     </tr>
-                    <tr><td colspan="3">Miles <input name="miles" type="number" value="2000"></td></tr>
-                    <tr><td colspan="3">Book Price <input name="bookprice" type="number" value="2000"></td></tr>
-                    <tr><td colspan="3">Price Paid <input name="paidprice" type="number" value="2000"></td></tr>
+                    <tr><td colspan="3">Miles <input name="miles" type="number" ></td></tr>
+                    <tr><td colspan="3">Book Price <input name="bookprice" type="number" ></td></tr>
+                    <tr><td colspan="3">Price Paid <input name="paidprice" type="number" ></td></tr>
                     
                 </table>
             </td>
