Finished warrenties and payments form

--- a/index.html
+++ b/index.html
@@ -10,25 +10,12 @@
 </head>
 <body>
     <table>
-        <tr>
-            <th>Select a link...</th>
-        </tr> 
-        
-        <tr>
-            <td><a href="./NewCar.html">New Car</a></td>
-        </tr>
-
-        <tr>            <
-            <td><a href="./UsedCar.html">Used Car</a></td>
-        </tr>
-
-        <tr>
-            <td><a href="./Warranties.html">Warranties</a></td>
-        </tr>
-
-        <tr>
-            <td><a href="./CarSales.html">Car Sales</a></td>
-        </tr>
+        <tr><th>Select a link...</th></tr> 
+        <tr><td><a href="./NewCar.html">New Car</a></td></tr>
+        <tr><td><a href="./UsedCar.html">Used Car</a></td></tr>
+        <tr><td><a href="./Warranties.html">Warranties</a></td></tr>
+        <tr><td><a href="./Payments.html">Payments</a></td></tr>
+        <tr><td><a href="./CarSales.html">Car Sales</a></td></tr>
     </table>
 </body>
 </html>
