--- a/CarSales.html
+++ b/CarSales.html
@@ -19,19 +19,19 @@
                        <th>Sale</th>
                     </tr>
                     <tr>
-                        <td>Date <input name="date" type="date"></td>
+                        <td>Date <input name="date" type="date"/></td>
                     </tr>
                     <tr>
-                        <td>Total Due <input name="total" type="number"></td>
+                        <td>Total Due <input name="total" type="number"/></td>
                     </tr>
                     <tr>
-                        <td>Down Payment <input name="down" type="number"</td>
+                        <td>Down Payment <input name="down" type="number"/></td>
                     </tr>
                     <tr>
-                        <td>Financed Ammount <input name="financed" type="number"></td>
+                        <td>Financed Ammount <input name="financed" type="number"/></td>
                     </tr>
                     <tr>
-                        <td>Interest Rate <input name="interest" type="text"></td>
+                        <td>Interest Rate <input name="interest" type="text"/></td>
                     </tr>
                 </table>        
             </td>
@@ -39,10 +39,10 @@
             <td>
                 <table height="200px" width="350px">
                         <tr><th>Salesperson</th></tr>
-                        <tr><td>Last Name <input name="saleslast" type="text"></td></tr>
-                        <tr><td>First Name <input name="salesfirst" type="text"></td></tr>
-                        <tr><td>Phone <input name="salesphone" type="text"></td></tr>
-                        <tr><td>Commision <input name="commision" type="number"></td></tr>
+                        <tr><td>Last Name <input name="saleslast" type="text"/></td></tr>
+                        <tr><td>First Name <input name="salesfirst" type="text"/></td></tr>
+                        <tr><td>Phone <input name="salesphone" type="text"/></td></tr>
+                        <tr><td>Commision <input name="commision" type="number"/></td></tr>
                 </table>
             </td>
         </tr>
@@ -51,13 +51,13 @@
             <td>
                 <table height="" width="350px">
                         <tr><th>Customer</th></tr>
-                        <tr><td>Phone <input name="custphone" type="text"></td></tr>
-                        <tr><td>Last Name <input name="custfirst" type="text"></td></tr>
-                        <tr><td>First Name <input name="custlast" type="text"></td></tr>
-                        <tr><td>Address <input name="address" type="text"></td></tr>
-                        <tr><td>City <input name="city" type="text"></td></tr>
-                        <tr><td>Province <input name="province" type="text"></td></tr>
-                        <tr><td>Zip <input name="zip" type="text" maxlength="6"></td></tr>
+                        <tr><td>Phone <input name="custphone" type="text"/></td></tr>
+                        <tr><td>Last Name <input name="custfirst" type="text"/></td></tr>
+                        <tr><td>First Name <input name="custlast" type="text"/></td></tr>
+                        <tr><td>Address <input name="address" type="text"/></td></tr>
+                        <tr><td>City <input name="city" type="text"/></td></tr>
+                        <tr><td>Province <input name="province" type="text"/></td></tr>
+                        <tr><td>Zip <input name="zip" type="text" maxlength="6"/></td></tr>
                 </table>
             </td>
             <td>
@@ -74,12 +74,12 @@
 
 
                         <tr class="fillout">
-                            <td class="fillout"><input name="e0" type="text"></td>
-                            <td class="fillout"><input name="t0" type="text"></td>
-                            <td class="fillout"><input name="su0" type="text"></td>
-                            <td class="fillout"><input name="p0" type="text"></td>
-                            <td class="fillout"><input name="a0" type="text"></td>
-                            <td class="fillout"><input name="s0" type="text"></td>
+                            <td class="fillout"><input name="e0" type="text"/></td>
+                            <td class="fillout"><input name="t0" type="text"/></td>
+                            <td class="fillout"><input name="su0" type="text"/></td>
+                            <td class="fillout"><input name="p0" type="text"/></td>
+                            <td class="fillout"><input name="a0" type="text"/></td>
+                            <td class="fillout"><input name="s0" type="text"/></td>
                         </tr>
                         <!--ADD HISTORY WOULD INSERT NEW SECTION HERE-->
                         <!--BUTTON FOR INPUTTING FILLOUT
@@ -90,48 +90,48 @@
 
                         <!-- Possibly use a PHP script for this.-->
                         <tr class="fillout">
-                                <td class="fillout"><input name="e1" type="text"></td>
-                                <td class="fillout"><input name="t1" type="text"></td>
-                                <td class="fillout"><input name="su1" type="text"></td>
-                                <td class="fillout"><input name="p1" type="text"></td>
-                                <td class="fillout"><input name="a1" type="text"></td>
-                                <td class="fillout"><input name="s1" type="text"></td>
+                                <td class="fillout"><input name="e1" type="text"/></td>
+                                <td class="fillout"><input name="t1" type="text"/></td>
+                                <td class="fillout"><input name="su1" type="text"/></td>
+                                <td class="fillout"><input name="p1" type="text"/></td>
+                                <td class="fillout"><input name="a1" type="text"/></td>
+                                <td class="fillout"><input name="s1" type="text"/></td>
                         </tr>
 
                         <tr class="fillout">
-                                <td class="fillout"><input name="e2" type="text"></td>
-                                <td class="fillout"><input name="t2" type="text"></td>
-                                <td class="fillout"><input name="su2" type="text"></td>
-                                <td class="fillout"><input name="p2" type="text"></td>
-                                <td class="fillout"><input name="a2" type="text"></td>
-                                <td class="fillout"><input name="s2" type="text"></td>
+                                <td class="fillout"><input name="e2" type="text"/></td>
+                                <td class="fillout"><input name="t2" type="text"/></td>
+                                <td class="fillout"><input name="su2" type="text"/></td>
+                                <td class="fillout"><input name="p2" type="text"/></td>
+                                <td class="fillout"><input name="a2" type="text"/></td>
+                                <td class="fillout"><input name="s2" type="text"/></td>
                         </tr>
 
                         <tr class="fillout">
-                                <td class="fillout"><input name="e3" type="text"></td>
-                                <td class="fillout"><input name="t3" type="text"></td>
-                                <td class="fillout"><input name="su3" type="text"></td>
-                                <td class="fillout"><input name="p3" type="text"></td>
-                                <td class="fillout"><input name="a3" type="text"></td>
-                                <td class="fillout"><input name="s3" type="text"></td>
+                                <td class="fillout"><input name="e3" type="text"/></td>
+                                <td class="fillout"><input name="t3" type="text"/></td>
+                                <td class="fillout"><input name="su3" type="text"/></td>
+                                <td class="fillout"><input name="p3" type="text"/></td>
+                                <td class="fillout"><input name="a3" type="text"/></td>
+                                <td class="fillout"><input name="s3" type="text"/></td>
                         </tr>
 
                         <tr class="fillout">
-                                <td class="fillout"><input name="e4" type="text"></td>
-                                <td class="fillout"><input name="t4" type="text"></td>
-                                <td class="fillout"><input name="su4" type="text"></td>
-                                <td class="fillout"><input name="p4" type="text"></td>
-                                <td class="fillout"><input name="a4" type="text"></td>
-                                <td class="fillout"><input name="s4" type="text"></td>
+                                <td class="fillout"><input name="e4" type="text"/></td>
+                                <td class="fillout"><input name="t4" type="text"/></td>
+                                <td class="fillout"><input name="su4" type="text"/></td>
+                                <td class="fillout"><input name="p4" type="text"/></td>
+                                <td class="fillout"><input name="a4" type="text"/></td>
+                                <td class="fillout"><input name="s4" type="text"/></td>
                         </tr>
 
                         <tr class="fillout">
-                                <td class="fillout"><input name="e5" type="text"></td>
-                                <td class="fillout"><input name="t5" type="text"></td>
-                                <td class="fillout"><input name="su5" type="text"></td>
-                                <td class="fillout"><input name="p5" type="text"></td>
-                                <td class="fillout"><input name="a5" type="text"></td>
-                                <td class="fillout"><input name="s5" type="text"></td>
+                                <td class="fillout"><input name="e5" type="text"/></td>
+                                <td class="fillout"><input name="t5" type="text"/></td>
+                                <td class="fillout"><input name="su5" type="text"/></td>
+                                <td class="fillout"><input name="p5" type="text"/></td>
+                                <td class="fillout"><input name="a5" type="text"/></td>
+                                <td class="fillout"><input name="s5" type="text"/></td>
                         </tr>
 
                 </table>
@@ -143,7 +143,7 @@
                         <tr>
                             <th>Vehicle Info</th>
                         </tr>
-                        <tr><td>VIN<input name="Vin" type="text" maxlength="17"></td></tr>
+                        <tr><td>VIN<input name="Vin" type="text" maxlength="17"/></td></tr>
                         <tr><td>Model
                             <select name="Model">
                                 <option>Camry</option>
@@ -159,14 +159,14 @@
                                 <!--<option></option>-->
                             </select>
                         </td></tr>
-                        <tr><td>Year<input name="year" type="number" value="2000"></td></tr>
-                        <tr><td>Miles<input name="miles" type="number"></td></tr>
-                        <tr><td>Sale Price <input name="saleprice" type="number"></td></tr>
+                        <tr><td>Year<input name="year" type="number" value="2000"/></td></tr>
+                        <tr><td>Miles<input name="miles" type="number"/></td></tr>
+                        <tr><td>Sale Price <input name="saleprice" type="number"/></td></tr>
                 </table>
             </td>         
         </tr>
         <tr>
-            <td><input type="submit"></td>
+            <td><input type="submit"/></td>
         </tr>
     </table>
     </form>
