--- a/Warranties.html
+++ b/Warranties.html
@@ -15,20 +15,20 @@
             <td>
                 <table height="200">
                     <tr><th>Vehicle Info</th></tr>
-                    <tr><td>VIN <input name="vin" type="text" maxlength="17"></td></tr>
-                    <tr><td>Customer <input name="custname" type="text"></td></tr>
-                    <tr><td>Co-Signer <input name="cocust" type="text"></td></tr>
-                    <tr><td>Warranty Sale Date <input name="saledate" type="date"></td></tr>
-                    <tr><td>Total Cost <input name="total" type="number"></td></tr>
-                    <tr><td>Monthly Cost <input name="monthlycost" type="number"></td></tr>
+                    <tr><td>VIN <input name="vin" type="text" maxlength="17"/></td></tr>
+                    <tr><td>Customer <input name="custname" type="text"/></td></tr>
+                    <tr><td>Co-Signer <input name="cocust" type="text"/></td></tr>
+                    <tr><td>Warranty Sale Date <input name="saledate" type="date"/></td></tr>
+                    <tr><td>Total Cost <input name="total" type="number"/></td></tr>
+                    <tr><td>Monthly Cost <input name="monthlycost" type="number"/></td></tr>
                 </table>
             </td>
             <td>
                 <table height="200">
                     <tr><th>Employee(Salesperson)</th></tr>
-                    <tr><td>Last Name <input name="emplast" type="text"></td></tr>
-                    <tr><td>First Name <input name="empfirst" type="text"></td></tr>
-                    <tr><td>Phone <input name="empphone" type="text"></td></tr>
+                    <tr><td>Last Name <input name="emplast" type="text"/></td></tr>
+                    <tr><td>First Name <input name="empfirst" type="text"/></td></tr>
+                    <tr><td>Phone <input name="empphone" type="text"/></td></tr>
                 </table>
             </td>
         </tr>
@@ -36,16 +36,16 @@
     <table>
         <tr>
             <th>Warranty</th>
-            <td>Start Date <input name="wardate" type="date"></td>
-            <td>Length <input name="warenddate" type="date"></td>
-            <td>Cost <input name="warcost" type="number"></td>
-            <td>Deductible <input name="wardeduct" type="number"></td>
+            <td>Start Date <input name="wardate" type="date"/></td>
+            <td>Length <input name="warenddate" type="date"/></td>
+            <td>Cost <input name="warcost" type="number"/></td>
+            <td>Deductible <input name="wardeduct" type="number"/></td>
         </tr>
         <tr><td>Items Covered:</td></tr>
-        <tr><td><input name="waritem" type="text"></td></tr>
+        <tr><td><input name="waritem" type="text"/></td></tr>
         <tr><td><button name="additem">Add Item</button></td></tr>
     </table>
-    <input type="submit">
+    <input type="submit"/>
     </form>
     
     <a href="./index.html"><button>Back</button></a>
