--- a/Payments.html
+++ b/Payments.html
@@ -12,9 +12,9 @@
     <form method="payment" action="./process.php">
         <table>
             <tr><th>Customer</th></tr>
-            <tr><td>Gender <input name="gender" type="text"></td></tr>
-            <tr><td>Date of Birth <input name="dob" type="date"></td></tr>
-            <tr><td>Average number of days late <input name="late" type="number"></td></tr>
+            <tr><td>Gender <input name="gender" type="text"/></td></tr>
+            <tr><td>Date of Birth <input name="dob" type="date"/></td></tr>
+            <tr><td>Average number of days late <input name="late" type="number"/></td></tr>
         </table>
         <table>
             <tr>
@@ -25,22 +25,22 @@
                 <td>Bank Account</td>
             </tr>
             <tr>
-                <td> <input name="pmtdate0" type="date"></td>
-                <td> <input name="duedate0" type="date"></td>
-                <td> <input name="paiddate0" type="date"></td>
-                <td><input name="ammount0" type="number"></td>
-                <td><input name="account0" type="text"></td>
+                <td> <input name="pmtdate0" type="date"/></td>
+                <td> <input name="duedate0" type="date"/></td>
+                <td> <input name="paiddate0" type="date"/></td>
+                <td><input name="ammount0" type="number"/></td>
+                <td><input name="account0" type="text"/></td>
             </tr>
             <tr>
-                <td> <input name="pmtdate1" type="date"></td>
-                <td> <input name="duedate1" type="date"></td>
-                <td> <input name="paiddate1" type="date"></td>
-                <td><input name="ammount1" type="number"></td>
-                <td><input name="account1" type="text"></td>
+                <td> <input name="pmtdate1" type="date"/></td>
+                <td> <input name="duedate1" type="date"/></td>
+                <td> <input name="paiddate1" type="date"/></td>
+                <td><input name="ammount1" type="number"/></td>
+                <td><input name="account1" type="text"/></td>
             </tr>
             <tr><td><button>Add Payment</button></td></tr>
         </table>
-        <input type="submit">
+        <input type="submit"/>
     </form>
     
     <a href="./index.html"><button>Back</button></a>
