--- a/CarSales.html
+++ b/CarSales.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
 </head>
 <body>
-    <form method="GetUsedCar" action="./process.php">
+    <form method="post" action="sale.php">
     <table>
         <tr>
 
@@ -42,7 +42,7 @@
                         <tr><td>Last Name <input name="saleslast" type="text"/></td></tr>
                         <tr><td>First Name <input name="salesfirst" type="text"/></td></tr>
                         <tr><td>Phone <input name="salesphone" type="text"/></td></tr>
-                        <tr><td>Commision <input name="commision" type="number"/></td></tr>
+                        <tr><td>Commission <input name="commission" type="number"/></td></tr>
                 </table>
             </td>
         </tr>
@@ -170,6 +170,6 @@
         </tr>
     </table>
     </form>
-    <a href="./index.html"><button>Back</button></a>  
+    <a href="index.html"><button>Back</button></a>  
 </body>
 </html>
