--- a/NewCar.html
+++ b/NewCar.html
@@ -11,7 +11,7 @@
 <body>
 
 
-    <form method="post" action="process.php">
+    <form method="post" action="newcarinput.php">
         <!--Table Title-->
         <table>
             <tr>
@@ -19,7 +19,7 @@
                     <table width="525px">
                         <tr><th colspan="2">New Car Purchase</th></tr>
                         <tr><td>Date & Vin
-                                <input name="Date" type="date"/>
+                                <input name="Date" type="Date"/>
                                 <input name="Vin" type="text" value="Enter Vin" maxlength="17"/>
                         </td>
                         </tr>
@@ -73,7 +73,7 @@
             <tr id="incolour">
                 <td>Interior Colour</td>
                 <td>
-                    <select name="ExteriorColour">
+                    <select name="InteriorColour">
                         <!--INSERT ANSWER TO ABOVE HERE in new option appended to end-->
                         <option>Black</option> 
                 </td>
