--- a/UsedCar.html
+++ b/UsedCar.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
 </head>
 <body>
-    <form method="GetUsedCar" action="./process.php">
+    <form method="post" action="./usedcarinput.php">
     <!--Form for PHP-->
     <table>
         <tr>
@@ -26,7 +26,7 @@
                         </td>
                     </tr>
                     <tr><td>Location <input name="Location" type="text"/></td></tr>
-                    <tr><td>Seller/Dealer<input name="Seller/Dealer" type="text" value="Enter Dealer"/></td></tr>
+                    <tr><td>Seller/Dealer<input name="Dealer" type="text" value="Enter Dealer"/></td></tr>
                 </table>
             </td>
         </tr>
