--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <tr><td><a href="./Warranties.html">Warranties</a></td></tr>
         <tr><td><a href="./Payments.html">Payments</a></td></tr>
         <tr><td><a href="./CarSales.html">Car Sales</a></td></tr>
+        <tr><td><a href="./inventoryquery.php">cars</a></td></tr>
     </table>
 </body>
 </html>
