--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <tr><td><a href="./Warranties.html">Warranties</a></td></tr>
         <tr><td><a href="./Payments.html">Payments</a></td></tr>
         <tr><td><a href="./CarSales.html">Car Sales</a></td></tr>
-        <tr><td><a href="./inventoryquery.php">cars</a></td></tr>
+        <tr><td><a href="./inventoryquery.php">Vehicle Inventory</a></td></tr>
+        <tr><td><a href="./customerquery.php">Customer Purchases</a></td></tr>
+        <tr><td><a href="./employeesalequery.php">Employee Commission</a></td></tr>
     </table>
 </body>
 </html>
