--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <tr><td><a href="./inventoryquery.php">Vehicle Inventory</a></td></tr>
         <tr><td><a href="./customerquery.php">Customer Purchases</a></td></tr>
         <tr><td><a href="./employeesalequery.php">Employee Commission</a></td></tr>
+         <tr><td><a href="./underachievers.php">Employee with poor Commission</a></td></tr>
+         <tr><td><a href="./highest_earner.php">Best Earner Commission</a></td></tr>
+         <tr><td><a href="./countproblems.php">used car problems</a></td></tr>
+        <tr><td><a href="./largestemployer.php">Largest Employer</a></td></tr>
+         <tr><td><a href="./cheapestnew.php">cheapest car</a></td></tr>
+         <tr><td><a href="./carsbymodel.php">cars sorted by model</a></td></tr>
     </table>
 </body>
 </html>
